fix: wrong fonts

--- a/assets/scss/layouts/blog/_blog.scss
+++ b/assets/scss/layouts/blog/_blog.scss
@@ -2,26 +2,25 @@
 // BLOG
 // =============================================================================
 
-
 // Blog post
 // -----------------------------------------------------------------------------
 
 .blog {
-    margin-bottom: spacing("single");
+    margin-bottom: spacing('single');
 
-    @include breakpoint("medium") {
+    @include breakpoint('medium') {
         margin: auto;
         width: 100%;
     }
 
     + .blog {
-        border-top: container("border");
-        margin-top: spacing("double");
-        padding-top: spacing("double");
+        border-top: container('border');
+        margin-top: spacing('double');
+        padding-top: spacing('double');
     }
 
     .tags {
-        margin-top: spacing("double");
+        margin-top: spacing('double');
         text-align: center;
     }
 
@@ -30,37 +29,42 @@
     }
 
     .addthis_toolbox {
-        margin-top: spacing("double");
+        margin-top: spacing('double');
     }
 }
 
 .blog-title {
-    font-size: fontSize("large");
-    margin: 0 spacing("single") spacing("quarter");
+    font-size: fontSize('large');
+    margin: 0 spacing('single') spacing('quarter');
 
     a {
         text-decoration: none;
+        font-family: 'Filson Pro', sans-serif;
     }
 }
 
 .blog-date,
 .blog-author {
-    color: stencilColor("color-textSecondary");
+    color: stencilColor('color-textSecondary');
     text-align: center;
 }
 
 .blog-author {
-    margin-bottom: spacing("single") + spacing("base");
+    margin-bottom: spacing('single') + spacing('base');
 }
 
 .blog-post {
-    font-size: fontSize("smaller");
+    font-size: fontSize('smaller');
     text-align: left;
+
+    h3 {
+        font-family: 'Filson Pro', sans-serif;
+    }
 }
 
 .blog-thumbnail {
-    margin: 0 auto (spacing("base") * 2);
-    max-width: get_width(stencilString("blog_size"));
+    margin: 0 auto (spacing('base') * 2);
+    max-width: get_width(stencilString('blog_size'));
     position: relative;
 
     img {
@@ -73,7 +77,7 @@
     margin: auto;
     text-align: center;
 
-    @include breakpoint("medium") {
+    @include breakpoint('medium') {
         width: grid-calc(8, $total-columns);
     }
 }
@@ -84,15 +88,15 @@
     text-align: center;
     width: 100%;
 
-    @include breakpoint("small") {
+    @include breakpoint('small') {
         width: grid-calc(10, $total-columns);
     }
 
-    @include breakpoint("medium") {
+    @include breakpoint('medium') {
         width: grid-calc(8, $total-columns);
     }
 
-    @include breakpoint("large") {
+    @include breakpoint('large') {
         width: grid-calc(6, $total-columns);
     }
 }
